# observers

./: .gitignore  README.md  hello.py  pyproject.toml  start.py
src/observers/: base.py  github.py  gmail.py  loggers.py  oversight.py  settings.py  slack.py
src/observers/github/: client.py  observer.py  source.py  types.py
