[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "observers/version.py"

[project]
name = "observers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp@git+https://github.com/jlowin/fastmcp.git",
    "humanlayer@git+https://github.com/zzstoatzz/humanlayer.git@relax-deps",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
gmail = [
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
]
slack = ["slack-sdk"]
all = ["observers[gmail,slack]"]

[tool.ruff]
line-length = 80
lint.extend-select = ["Q", "RUF100", "C90", "UP", "I"]
lint.ignore = ["E721"]
lint.flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
lint.mccabe = { max-complexity = 14 }
lint.pydocstyle = { convention = "google" }
format.quote-style = "single"
target-version = "py312"
